--- a/appspec.yml
+++ b/appspec.yml
@@ -3,15 +3,18 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/node-app
+
 hooks:
   BeforeInstall:
     - location: scripts/set_permissions.sh
-      timeout: 60
-      runas: ec2-user
+      timeout: 300
+      runas: root
+
   AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
       runas: ec2-user
+
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
