--- a/appspec.yml
+++ b/appspec.yml
@@ -6,6 +6,9 @@ files:
 
 hooks:
   BeforeInstall:
+    - location: scripts/setup_node.sh
+      timeout: 300
+      runas: root
     - location: scripts/set_permissions.sh
       timeout: 300
       runas: root
